<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10">

    <ProgressBar
        android:id="@+id/loader"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing_mlarge"
            android:layout_marginTop="@dimen/spacing_large"
            android:src="@drawable/logo_round"
            android:tint="@android:color/white" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_middle"
            android:visibility="visible"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:text="@string/intro_app_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/green_500"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/email"
                    android:textStyle="bold"
                    app:errorEnabled="true">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="text"
                        android:hint="@string/email_hint"
                        android:id="@+id/input_email"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_hint"
                    android:textColor="@color/colorPurple"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:imeOptions="actionDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textPassword"
                        android:hint="@string/password_hint"
                        android:id="@+id/input_password"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/btn_login"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded_primary"
                    android:text="@string/s_i_g_n_i_n"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_user"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_300" />

                    <!--<TextView-->
                        <!--android:id="@+id/go_to_register"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:clickable="true"-->
                        <!--android:text="Sign Up"-->
                        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
                        <!--android:textColor="@color/colorPrimaryLight"-->
                        <!--android:textStyle="bold" />-->

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_account"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrimaryLight"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:id="@+id/link_signup"/>

                    <!--<ImageButton-->
                        <!--android:id="@+id/btn_facebook"-->
                        <!--android:background="@drawable/facebook_selector"-->
                        <!--android:layout_gravity="center_horizontal"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="30dp"/>-->

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:layout_marginBottom="100dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:id="@+id/pleaseWait"/>

</RelativeLayout>
